# libfork

./: .clangd  CMakeLists.txt  CMakePresets.json
bench/: CMakeLists.txt
bench/source/: util.hpp
bench/source/fib/: libfork.cpp  tmc.cpp
bench/source/integrate/: libfork.cpp  tmc.cpp
bench/source/matmul/: libfork.cpp  tmc.cpp
bench/source/nqueens/: libfork.cpp  tmc.cpp
bench/source/primes/: libfork.cpp
bench/source/uts/: libfork.cpp  tmc.cpp
benchmark/: bench.hpp
benchmark/libfork/: fib.cpp
benchmark/tmc/: CMakeLists.txt  fib.cpp
cmake/: benchmark.cmake
